# cpp_upgrading

./: CMakeLists.txt  build.sh  data.json  run-test.sh  test.txt
include/: controller.h  persister.h  product.h  serializer.h  storage.h  test.h
learning/: borker  broker.cpp  iterators.cpp  move  move.cpp  run  test  testing.cpp  thread  threads_locks_mutex.cpp
src/: CMakeLists.txt  main.cpp  test.cpp  view.h
src/controller/: storage_controller.cpp
src/models/: product.cpp  storage.cpp
src/persistence/: file_persister.cpp
test/: CMakeLists.txt  test_test.cpp
test/controller/: test_controller.cpp
test/json/: test_janson.cpp
test/models/: test_storage.cpp  test_storaged_product.cpp
test/persistence/: test_file_persister.cpp
